# CyberScoreboard

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
Client/: index.html  package-lock.json  package.json  tailwind.config.js
Client/src/: main.tsx  types.ts  util.ts
Client/src/Components/: NaiveShrinker.tsx  Shrinker.tsx  TeamAdmin.tsx
Client/src/Components/Admin/: Controls.tsx  Injects.tsx  Saves.tsx  Services.tsx  TeamAdmin.tsx
Client/src/Hooks/: CtrlHooks.ts
Client/src/Pages/: Admin.tsx  App.tsx  Login.tsx  TeamInject.tsx  TeamPasswords.tsx  TeamScore.tsx
other_res/: oi.yaml  os.yaml  ot.yaml  slow.sh  test.sh
other_res/AD/: login.sh
other_res/PW/Baylor/: ssh.pw
other_res/SSH/: login.sh
other_res/WEB/: curlfind.sh
other_res/downloads/: hello.csv
other_res/injects/Baylor/: First_Inject_response.cpp  First_Inject_response.justfile  First_Inject_response.md  First_Inject_response.txt  Inventory_late_response.txt  Inventory_response.cpp  Inventory_response.h
other_res/save/autosave/: autosave-0.json  autosave-1.json  autosave-10.json  autosave-11.json  autosave-2.json  autosave-3.json  autosave-4.json  autosave-5.json  autosave-6.json  autosave-7.json  autosave-8.json  autosave-9.json
public/: index.html
public/assets/: index.20324306.css  index.2d167462.js  index.595a7bf0.js  index.649ce991.css  index.65d15342.js  index.7c2f66cb.css  index.8936522c.js  index.8c9ddeee.js  index.94e970f7.js  index.9541592d.css  index.98735a26.js  index.abda57c9.js  index.ae7ae48a.js  index.b5df9b08.css  index.c1e2d310.css  index.c85c2b7d.css  index.d5919b16.js  index.db482fd8.js  index.e619f12c.js  index.f029493c.css
public/assets/injects/: hello.txt  inventory.txt
resources/: .env  README.md  port.sh  rand.py  templates.yaml
resources/AD/: nologin.sh
resources/FTP/: nologin.sh
resources/MC/: matchdesc.py
resources/SSH/: nologin.sh
src/: auth.rs  checker.rs  main.rs  password.rs  router.rs
src/checker/: artifact.rs  base.rs  config.rs  inject.rs  password.rs  save.rs  service.rs  team.rs
src/router/: admin.rs  team.rs
