[package]
name = "scoreboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["multipart"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
handlebars = "4.3.7"
markdown = "0.3.0"
regex = "1.7.0"
serde = { version="1.0.130", features = ["derive"] }
serde_json = "1.0.89"
serde_millis = "0.1.1"
serde_yaml = "0.9.14"
time = "0.3.17"
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
wait-timeout = "0.2.0"
