[package]
name = "scoreboard"
version = "1.3.0"
edition = "2021"
repository = "https://github.com/bmin023/CyberScoreboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.7.5", features = ["multipart"] }
axum-login = "0.13.1"
handlebars = "4.3.7"
markdown = "0.3.0"
regex = "1.7.0"
serde = { version="1.0.166", features = ["derive"] }
serde_json = "1.0.89"
serde_millis = "0.1.1"
serde_yaml = "0.9.14"
time = "0.3.17"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
tower-sessions = "0.12.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
